# weatherproject

./: LICENSE  db.sqlite3  important.env  pyproject.toml  render.yaml  requirement.txt
staticfiles/: staticfiles.json
weatherapplication/: apps.py  models.py  urls.py  views.py
weatherapplication/migrations/: 0001_initial.py  0002_rename_first_name_feedback_firstname_and_more.py  0003_feedback_user_time_feedback_user_timezone.py  0004_remove_feedback_user_time_and_more.py
weatherapplication/templates/: current_weather.html  feedbackform.html  home.html  login.html  search.html  signup.html  weather_forecast.html
weatherproject/: README.md  settings.py  urls.py  wsgi.py
weatherproject/weatherapplication/: views.py
weatherproject/weatherapplication/templates/: home.html
weatherproject/weatherproject/staticfiles/: staticfiles.json
