[tool.poetry]
name = "weatherproject"
version = "0.1.0"
description = ""
authors = ["Abhijit Das <abhijitdas7121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
pathlib2 = "^2.3.7.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
